tests/invalid/test_may_duplicate.err_exp2
test_may_duplicate.m:033: Error: the `may_duplicate' attribute on the
test_may_duplicate.m:033:   foreign_proc contradicts the `no_inline' pragma on
test_may_duplicate.m:033:   the predicate.
test_may_duplicate.m:055: Error: the `may_not_duplicate' attribute on the
test_may_duplicate.m:055:   foreign_proc contradicts the `inline' pragma on the
test_may_duplicate.m:055:   predicate.
